[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kmeans"
version = "0.1"
authors = [
  { name="A. Asensio Ramos", email="andres.asensio@iac.es" },
]
description = "k-means with shifts in PyTorch"
readme = "README.md"
requires-python = ">=3.11.0"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python',
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Physics',
]
dependencies = [
    "torch>=2.6.0",    
]

# https://docs.astral.sh/uv/guides/integration/pytorch/#using-a-pytorch-index

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

  [[tool.uv.index]]
  name = "pytorch-cpu"
  url = "https://download.pytorch.org/whl/cpu"
  explicit = true

  [[tool.uv.index]]
  name = "pytorch-cu124"
  url = "https://download.pytorch.org/whl/cu124"
  explicit = true
